# advent-of-code

./: .gitignore  README.md  report.20191218.222059.4897.0.001.json
2018/day-11/: Cargo.toml
2018/day-12/: Cargo.toml
2018/day-14/: Cargo.toml
2018/day-16/: Cargo.toml
2018/day-7/: Cargo.toml
2018/day_1/: Cargo.toml
2018/day_2/: Cargo.toml
2018/day_3/: Cargo.toml
2018/day_4/: Cargo.toml
2018/day_5/: Cargo.toml
2018/day_6/: Cargo.toml
2018/swift/: 01.swift  02.swift
2019/: Cargo.toml
2019/apl/: one.apl
2019/deno/: five.ts  intCode.ts  nine.ts  seven.ts  two.ts
2019/js/: day_eighteen.js  day_fifteen.js  day_fourteen.js  day_nineteen.js  day_twentythree.js  dayeight.js  dayfive.js  daysix.js  daythirteen.js  daythree.js
2019/presentation/: package.json
2019/src/: day_eight.rs  day_two.rs
2020/: .gitignore  Cargo.toml  ReadMe.md
2021/: README.md
2022/: Cargo.toml  README.md
2023/: .editorconfig  .gitignore  Cargo.toml
2024/: Cargo.toml  deno.json
aoc/: Cargo.toml
aoc/src/: lib.rs
js/: day_eighteen.js  day_fifteen_2.js  day_fourteen.js  day_seventeen.js  day_sixteen.js  day_twenty.js  day_twentyfour.js  day_twentyone.js  day_twentythree.js  day_twentytwo.js  dayeight.js  dayeleven.js  dayfive.js  dayfour.js  daynine.js  dayone.js  dayseven.js  daysix.js  dayten.js  daythirteen.js  daythree.js  daytwelve.js  intCode.js
presentation/: deck.mdx  package.json
src/: day_eight.rs  day_four.rs  day_one.rs  day_two.rs  lib.rs  main.rs
template/: Cargo.toml  cargo-generate.toml
tests/: dayfour.rs  dayone.rs  daytwo.rs
(+297 files in other folders)
