[package]
name = "aoc"
version = "0.1.0"
authors = ["Joseph Chamochumbi <sephxd1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest= { version = "0.11.4", features = ["blocking"] }
dotenv = "0.15.0"
